💁‍♀️ fix footer spacing, add rss feed nav

--- a/_src/static/css/organisms/_site-footer.pcss
+++ b/_src/static/css/organisms/_site-footer.pcss
@@ -1,6 +1,7 @@
 .site-footer {
   display: flex;
   flex-flow: row wrap;
+  gap: 4vmin;
   margin-top: 10vh;
   padding-bottom: 5vh;
   padding-left: 4vmin;
